--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-    "name": "node-app",
-    "description": "jenkins test app",
-    "version": "0.0.1",
-    "private": true,
-    "dependencies": {
-       "express": "3.12.0"
-    },
-    "devDependencies": {
-       "mocha": "10.2.0",
-       "supertest": "6.3.3"
-    }
-   }
+  "name": "regi-project", 
+  "version": "1.0.0",
+  "description": "A simple web application",
+  "scripts": {
+    "start": "live-server" 
+  },
+  "dependencies": {
+    "live-server": "^1.22.1" 
+  }
+}
